Updated reserve html with icons.

--- a/Views/reserve.html
+++ b/Views/reserve.html
@@ -17,7 +17,7 @@
 
   <div class="container" style="font-family:verdana;">
     <div class="jumbotron" align="center">
-        <h1 class="display-4">Hot Restaurant</h1>
+        <h1 class="display-4"><i class='fab fa-gripfire'> Hot Restaurant</i></h1>
         <hr class="my-4">
         <h4>Make Your Reservation</h4>
         <a class="btn btn-primary btn-lg" href="#" role="button"><i class='fas fa-table'> View Tables</i></a>
